--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="info__item">
                 <div class="info__left">
                     <h3 class="info__title">LOREM IPSUM DOL MIT SAMET</h3>
-                    <h4 class="info__subtitle">Per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus<h4>
+                    <h4 class="info__subtitle">Per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus</h4>
                     <a href="#" class="info__btn">More</a>
                 </div>
                 <div class="info__right right1">
@@ -98,7 +98,7 @@
             <div class="info__item">
                 <div class="info__left">
                     <h3 class="info__title b">LOREM IPSUM DOL MIT SAMET</h3>
-                    <h4 class="info__subtitle b">Per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus<h4>
+                    <h4 class="info__subtitle b">Per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus</h4>
                     <a href="#" class="info__btn b blrect">More</a>
                 </div>
                 <div class="info__right right2">
@@ -108,7 +108,7 @@
             <div class="info__item">
                 <div class="info__left">
                     <h3 class="info__title b">LOREM IPSUM DOL MIT SAMET</h3>
-                    <h4 class="info__subtitle b">Per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus<h4>
+                    <h4 class="info__subtitle b">Per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus</h4>
                     <a href="#" class="info__btn b blrect">More</a>
                 </div>
                 <div class="info__right right3">
